Better subscription handling

--- a/src/style.scss
+++ b/src/style.scss
@@ -106,9 +106,10 @@ li footer {
 
 aside {
     display: flex;
+    justify-content: center;
     align-items: center;
     margin-right: 1rem;
-    min-width: 1rem;
+    min-width: 2rem;
     font-weight: 500;
     color: $g1;
 }
@@ -135,7 +136,6 @@ article {
         padding-bottom: 1rem;
     }
 }
-
 
 .comments-view {
     margin-left: -1.5rem;
